--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 py-lg-0 px-lg-5">
             <a href="" class="navbar-brand d-block d-lg-none">
-                <h1 class="m-0 display-5 text-capitalize font-italic text-white"><span class="text-primary">Safety</span>First</h1>
+                <h1 class="m-0 display-5 text-capitalize font-italic text-white"><span class="text-primary">Vida</span>Paws</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -302,7 +302,7 @@
                     <div class="d-flex flex-column text-center bg-white mb-2 p-3 p-sm-5">
 
                         <h3 class="mb-3">Mascota 2</h3>
-                        <img src="img/perrita_2.jpg"width="250" height="285">
+                        <img src="img/perrita_2.jpg"width="290" height="350">
                         <p>Llena de alegria su día, es hembra, adopta esta hermosura, no te vas a arrepentir🥰</p>
                         <a class="text-uppercase font-weight-bold" href="">Leer más</a>
                     </div>
@@ -311,7 +311,7 @@
                     <div class="d-flex flex-column text-center bg-white mb-2 p-3 p-sm-5">
 
                         <h3 class="mb-3">Mascota 3</h3>
-                          <img src="img/perrita_3.jpg" width="250" height="285">
+                          <img src="img/perrita_3.jpg" width="290" height="350">
                         <p>Mira su carita, una verdadera lindura, es hembra y esta lista para irse a un hogar calido y feliz😘</p>
                         <a class="text-uppercase font-weight-bold" href="">Leer más</a>
                     </div>
