--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-6">
                 <div class="team card position-relative overflow-hidden border-0 mb-4">
-                    <img class="card-img-top" src="img/majho.jpg" alt=width="300" height="350">
+                    <img class="card-img-top" src="img/majho.jpg" width="300" height="350">
                     <div class="card-body text-center p-0">
                         <div class="team-text d-flex flex-column justify-content-center bg-light">
                             <h5>Marjhory Fernandez</h5>
@@ -501,7 +501,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="team card position-relative overflow-hidden border-0 mb-4">
-                    <img class="card-img-top" src="img/azul.jpg" alt=width="300" height="350">
+                    <img class="card-img-top" src="img/azul.jpg" width="300" height="350">
                     <div class="card-body text-center p-0">
                         <div class="team-text d-flex flex-column justify-content-center bg-light">
                             <h5>Azul Orosco</h5>
@@ -518,7 +518,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="team card position-relative overflow-hidden border-0 mb-4">
-                    <img class="card-img-top" src="img/ilo.jpg" alt= width="150" height="400">
+                    <img class="card-img-top" src="img/ilo.jpg" width="150" height="400">
                     <div class="card-body text-center p-0">
                         <div class="team-text d-flex flex-column justify-content-center bg-light">
                             <h5>Alondra Carlos</h5>
@@ -535,7 +535,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="team card position-relative overflow-hidden border-0 mb-4">
-                    <img class="card-img-top" src="img/maikel.jpg" alt=width="300" height="350">
+                    <img class="card-img-top" src="img/maikel.jpg" width="300" height="350">
                     <div class="card-body text-center p-0">
                         <div class="team-text d-flex flex-column justify-content-center bg-light">
                             <h5>Maykel Baz&aacute;n</h5>
