--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>VidaPaws - Una segunda oportunidad</title>
-    <link rel="icon" href="img/icono.jpg" />
+    <link rel="icon" href="img/ico.jpg" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
