--- a/index.html
+++ b/index.html
@@ -318,25 +318,25 @@
                 </div>
                 <div class="col-md-6 col-lg-4 mb-4">
                     <div class="d-flex flex-column text-center bg-white mb-2 p-3 p-sm-5">
-                        <h3 class="flaticon-cat display-3 font-weight-normal text-secondary mb-3"></h3>
-                        <h3 class="mb-3">Por entrenamiento</h3>
-                        <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
+                        <h3 class="mb-3">Mascota 4</h3>
+                          <img src="img/gatito_1.jpg" width="250" height="285">
+                        <p>La vida es más completa con un ronroneo constante. ¡Adopta un gatito y descubre la verdadera felicidad en cada momento!🤗</p>
                         <a class="text-uppercase font-weight-bold" href="">Leer más</a>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 mb-4">
                     <div class="d-flex flex-column text-center bg-white mb-2 p-3 p-sm-5">
-                        <h3 class="flaticon-dog display-3 font-weight-normal text-secondary mb-3"></h3>
-                        <h3 class="mb-3">Ejercicio para mascotas</h3>
-                        <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
+                        <h3 class="mb-3">Mascota 5</h3>
+                          <img src="img/gatita_2.jpg" width="250" height="285">
+                        <p>En un mundo donde puedes ser cualquier cosa, sé alguien que salva vidas. Adopta una gatita y sé el héroe que transforma su destino.😊</p>
                         <a class="text-uppercase font-weight-bold" href="">Leer más</a>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 mb-4">
                     <div class="d-flex flex-column text-center bg-white mb-2 p-3 p-sm-5">
-                        <h3 class="flaticon-vaccine display-3 font-weight-normal text-secondary mb-3"></h3>
-                        <h3 class="mb-3">Tratamiento de mascotas</h3>
-                        <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
+                        <h3 class="mb-3">Mascota 6</h3>
+                         <img src="img/gatita_3.jpg" width="250" height="285">
+                        <p>No subestimes el poder transformador de una gatita en tu vida. ¡Adopta una y descubre cómo una pequeña peluda puede hacer una gran diferencia en tu mundo!😁</p>
                         <a class="text-uppercase font-weight-bold" href="">Leer más</a>
                     </div>
                 </div>
