--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     <div class="d-flex flex-column text-center bg-white mb-2 p-3 p-sm-5">
                         <h3 class="mb-3">Mascota 4</h3>
                           <img src="img/gatito_1.jpg" width="250" height="285">
-                        <p>La vida es más completa con un ronroneo constante. ¡Adopta un gatito y descubre la verdadera felicidad en cada momento!🤗</p>
+                        <p>La vida es más completa con un ronroneo constante.¡Adopta un gatito!🤗</p>
                         <a class="text-uppercase font-weight-bold" href="">Leer más</a>
                     </div>
                 </div>
@@ -328,7 +328,7 @@
                     <div class="d-flex flex-column text-center bg-white mb-2 p-3 p-sm-5">
                         <h3 class="mb-3">Mascota 5</h3>
                           <img src="img/gatita_2.jpg" width="250" height="285">
-                        <p>En un mundo donde puedes ser cualquier cosa, sé alguien que salva vidas. Adopta una gatita y sé el héroe que transforma su destino.😊</p>
+                        <p>En un mundo donde puedes ser cualquier cosa, sé alguien que salva vidas. Adopta una gatita.😊</p>
                         <a class="text-uppercase font-weight-bold" href="">Leer más</a>
                     </div>
                 </div>
@@ -336,7 +336,7 @@
                     <div class="d-flex flex-column text-center bg-white mb-2 p-3 p-sm-5">
                         <h3 class="mb-3">Mascota 6</h3>
                          <img src="img/gatita_3.jpg" width="250" height="285">
-                        <p>No subestimes el poder transformador de una gatita en tu vida. ¡Adopta una y descubre cómo una pequeña peluda puede hacer una gran diferencia en tu mundo!😁</p>
+                        <p>No subestimes el poder transformador de una gatita en tu vida. ¡Adopta una!😁</p>
                         <a class="text-uppercase font-weight-bold" href="">Leer más</a>
                     </div>
                 </div>
